src-errormsg/E07-WrongField/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E07-WrongField/Plutarch.hs:38:41: error: [GHC-83865]
    • Couldn't match type ‘PInteger’ with ‘PWithdraw’
      Expected: Term s (PAsData PWithdraw)
        Actual: Term s (PAsData PInteger)
    • In the first argument of ‘pfromData’, namely ‘n’
      In the second argument of ‘(#)’, namely ‘pfromData n’
      In the first argument of ‘(-)’, namely ‘(self # pfromData n)’
   |
38 |     PDeduct n from -> (self # pfromData n) - pfromData from
   |                                         ^

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E07-WrongField/Plutarch.hs:38:56: error: [GHC-83865]
    • Couldn't match type ‘PWithdraw’ with ‘PInteger’
      Expected: Term s (PAsData PInteger)
        Actual: Term s (PAsData PWithdraw)
    • In the first argument of ‘pfromData’, namely ‘from’
      In the second argument of ‘(-)’, namely ‘pfromData from’
      In the expression: (self # pfromData n) - pfromData from
   |
38 |     PDeduct n from -> (self # pfromData n) - pfromData from
   |                                                        ^^^^
